# Afghanistan-Province-Game-Web-Version

./: Afghanistan_Provinces.csv  app.py  pyproject.toml  requirements.txt  states_to_learn.csv  vercel.json
api/: index.py
static/: game.js  style.css
templates/: index.html
