[project]
name = "afghanistan-provinces-game"
version = "1.0.0"
description = "Afghanistan Provinces Game Web Version"
dependencies = [
    "Flask==2.3.3",
    "pandas==2.0.3",
    "gunicorn==21.2.0"
]

[build-system]
requires = ["setuptools>=68.2.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
